# wolverine-linux

./: .gitignore  CONTEXT.md  README.md
docs/: usb-analysis.md
packaging/: 99-wolverine.rules  install.sh  wolverined.service
rust/: Cargo.toml  README.md
rust/src/: audio.rs  gip.rs  input.rs  iso.rs  main.rs  ring.rs  usb.rs
tools/: Makefile  gip_init.py  iso_audio.py  probe.py  probe_gip.py  wolverine_pw.c
