[package]
name = "wolverine-linux"
version = "0.1.0"
edition = "2021"
description = "Native Rust userspace driver for the Razer Wolverine Ultimate: audio jack, mic and media buttons"
license = "GPL-2.0-or-later"
repository = "https://github.com/salaroli/wolverine-linux"

[[bin]]
name = "wolverined"
path = "src/main.rs"

[dependencies]
# USB (EP1 GIP handshake + EP2 events): pure-Rust interrupt/bulk transport.
# Handshake is validated on hardware against 0.1; no reason to move to 0.2's
# endpoint API since NEITHER 0.1 nor 0.2 exposes isochronous transfers.
nusb = "0.1"

# USB (EP3 isochronous audio): raw libusb. nusb has no public iso API, so the
# EP3 engine (iso.rs) drives libusb directly — a faithful port of the Python
# iso_audio.py (which uses python-libusb1). Two handles to the same device
# (nusb usbfs + libusb), each owning different interfaces, mirrors the proven
# pyusb+usb1 hybrid. Unsafe FFI is isolated to iso.rs.
libusb1-sys = "0.7"
libc = "0.2" # timeval for libusb_handle_events_timeout

# Minimal async plumbing: nusb transfers are futures, so we block_on them and
# race against a timer for the request/response handshake timeouts.
futures-lite = "2"
async-io = "2"

# PipeWire — official bindings. These replace the hand-written C shim
# (tools/wolverine_pw.c) and expose SPA audio-format building natively.
# 0.8 failed to build against the system PipeWire 1.6.6 (spa_pod_builder layout
# changed); trying 0.10 which is newer.
pipewire = "0.10"
libspa = "0.10"

# uinput — re-expose the gamepad and a separate keyboard-only device for media keys.
input-linux = "0.7"

# Lock-free SPSC ring buffer for the RT-audio <-> USB bridge (replaces the C
# mutex + drop-on-overflow rings). One per direction.
rtrb = "0.3"

# Ergonomics
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# NOTE: crate versions are a starting point and may need bumping once the
# toolchain is installed (`rustup` + `cargo build`). libspa/pipewire track
# the installed PipeWire (1.6.6 here); adjust if the ABI mismatches.
